@@ -40,6 +40,7 @@
 
 # define F_GETFD    1
 # define F_SETFD    2
+# define F_SETFL    4
 # define F_SETLK    6
 # define F_SETLKW   7
 
