@@ -1,3 +1,9 @@
+2010-01-30  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/evil_fcntl.c:
+	* src/lib/evil_fcntl.h:
+	fix fcntl() with F_SETFL command
+
 2010-01-29  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/evil_fcntl.c:
